# CSMF_python

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MATHEMATICS.md  MATLAB_TRANSLATION_COMPLETE.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  RANK_SELECTION_GUIDE.md  RANK_SELECTION_V2_GUIDE.md  README.md  examples.py  examples_rank_selection.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
CSMF_code/CSMF_code/: NeNMF_data.m  README.txt  repeat_iNMF.m
csmf/: __init__.py  csmf.py  inmf.py  jnmf.py  nenmf.py
csmf/gpu/: __init__.py  config.py  examples.py  gpu_csmf.py  gpu_inmf.py  gpu_jnmf.py  gpu_nenmf.py  gpu_nenmf_old.py  utils.py
csmf/tests/: test_rank_selection_svd.py
csmf/utils/: __init__.py  evaluation.py  hungarian.py  rank_selection.py  rank_selection_svd.py  stopping_criteria.py
tests/: test_comparison.py  test_cpu.py  test_cpu_vs_gpu_factors.py  test_good_synthetic_data.py  test_gpu.py
